{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 51,
  "lineage": "666b64b2-451d-75d7-e819-2e2d57ffbf12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "control-node-ubuntu",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:619071331895:instance/i-0fd63285a6f4d0303",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd63285a6f4d0303",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jasim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b401a6e4f2bee80c"
              }
            ],
            "primary_network_interface_id": "eni-0b401a6e4f2bee80c",
            "private_dns": "ip-192-0-1-112.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.0.1.112",
            "public_dns": "ec2-13-206-206-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.206.44",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dee3684f07682cfd",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ad196942dcc218a",
            "tags": {
              "Name": "control-node-ubuntu",
              "OSFamily": "ubuntu"
            },
            "tags_all": {
              "Name": "control-node-ubuntu",
              "OSFamily": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dbb3921c2703dcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "i-0fd63285a6f4d0303",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": "worker-amazon",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01b40e1bcccae197a",
            "arn": "arn:aws:ec2:ap-south-1:619071331895:instance/i-0bf58f4b8580d4198",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf58f4b8580d4198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jasim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0028be61d63af08a8"
              }
            ],
            "primary_network_interface_id": "eni-0028be61d63af08a8",
            "private_dns": "ip-192-0-1-170.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.0.1.170",
            "public_dns": "ec2-13-126-193-11.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.193.11",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0241dd5307df88bd0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ad196942dcc218a",
            "tags": {
              "Name": "worker-amazon",
              "OSFamily": "amazon"
            },
            "tags_all": {
              "Name": "worker-amazon",
              "OSFamily": "amazon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dbb3921c2703dcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "i-0bf58f4b8580d4198",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": "worker-redhat",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00a3ff43223e36738",
            "arn": "arn:aws:ec2:ap-south-1:619071331895:instance/i-0b38af01fbf3173c8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b38af01fbf3173c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jasim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-030c6fce68d85013e"
              }
            ],
            "primary_network_interface_id": "eni-030c6fce68d85013e",
            "private_dns": "ip-192-0-1-8.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.0.1.8",
            "public_dns": "ec2-13-234-112-84.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.112.84",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f72340c57fdf4a9",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ad196942dcc218a",
            "tags": {
              "Name": "worker-redhat",
              "OSFamily": "redhat"
            },
            "tags_all": {
              "Name": "worker-redhat",
              "OSFamily": "redhat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dbb3921c2703dcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "i-0b38af01fbf3173c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": "worker-ubuntu",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:619071331895:instance/i-0bbf8cdbbef910b50",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbf8cdbbef910b50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jasim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b719698e20789d58"
              }
            ],
            "primary_network_interface_id": "eni-0b719698e20789d58",
            "private_dns": "ip-192-0-1-99.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.0.1.99",
            "public_dns": "ec2-65-2-124-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.124.113",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de2154daa9530af3",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ad196942dcc218a",
            "tags": {
              "Name": "worker-ubuntu",
              "OSFamily": "ubuntu"
            },
            "tags_all": {
              "Name": "worker-ubuntu",
              "OSFamily": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dbb3921c2703dcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "i-0bbf8cdbbef910b50",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:internet-gateway/igw-08c03c4266d064376",
            "id": "igw-08c03c4266d064376",
            "owner_id": "619071331895",
            "region": "ap-south-1",
            "tags": {
              "Name": "custom_igw"
            },
            "tags_all": {
              "Name": "custom_igw"
            },
            "vpc_id": "vpc-08b820dc3bf64e227"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:route-table/rtb-0b22660be40f470b4",
            "id": "rtb-0b22660be40f470b4",
            "owner_id": "619071331895",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c03c4266d064376",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b820dc3bf64e227"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "rtb-0b22660be40f470b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3dfbbed11fff9c4",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b22660be40f470b4",
            "subnet_id": "subnet-07ad196942dcc218a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "rtbassoc-0a3dfbbed11fff9c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:security-group/sg-01dbb3921c2703dcf",
            "description": "Security group for custom VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dbb3921c2703dcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "619071331895",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b820dc3bf64e227"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "sg-01dbb3921c2703dcf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:subnet/subnet-07ad196942dcc218a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ad196942dcc218a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619071331895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-08b820dc3bf64e227"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "subnet-07ad196942dcc218a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:vpc/vpc-08b820dc3bf64e227",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0be2ab6bde967a310",
            "default_route_table_id": "rtb-0834c5a8316db8123",
            "default_security_group_id": "sg-08d8a9fe8108db374",
            "dhcp_options_id": "dopt-06b6d0da0b235b38d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b820dc3bf64e227",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0834c5a8316db8123",
            "owner_id": "619071331895",
            "region": "ap-south-1",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "vpc-08b820dc3bf64e227",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:security-group-rule/sgr-0763eff1a15cb8b6e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0763eff1a15cb8b6e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01dbb3921c2703dcf",
            "security_group_rule_id": "sgr-0763eff1a15cb8b6e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "sgr-0763eff1a15cb8b6e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:security-group-rule/sgr-0df52d2ed1aaa6493",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0df52d2ed1aaa6493",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01dbb3921c2703dcf",
            "security_group_rule_id": "sgr-0df52d2ed1aaa6493",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "sgr-0df52d2ed1aaa6493",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:619071331895:security-group-rule/sgr-077b3fbbaae590e9e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-077b3fbbaae590e9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-01dbb3921c2703dcf",
            "security_group_rule_id": "sgr-077b3fbbaae590e9e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071331895",
            "id": "sgr-077b3fbbaae590e9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    }
  ]
}